<resources>
    <string name="app_name">VSS WeatherApp</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="celcius">ºC</string>
    <string name="farenheight">ºF</string>
    <string name="description_language">Description Language</string>
    <string name="english">EN</string>
    <string name="portuguese">PT</string>
    <string name="wind">wind</string>
    <string name="clouds">clouds</string>
    <string name="no_internet">No internet connection</string>
    <string name="settings">Settings</string>
</resources>
