<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.settings.SettingsActivity">

    <TextView
            android:text="@string/temperature_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTemp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <RadioGroup
            android:layout_width="127dp"
            android:layout_height="31dp"
            android:orientation="horizontal"
            android:id="@+id/rgUnit" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvTemp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp">
        <RadioButton
                android:text="@string/celcius"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:id="@+id/rbCelcius" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/farenheight"
                android:layout_width="16dp"
                android:layout_height="wrap_content" android:id="@+id/rbFarenheight" android:layout_weight="1"/>
    </RadioGroup>
    <TextView
            android:text="@string/description_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLanguage" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/rgUnit" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <RadioGroup
            android:layout_width="125dp"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:id="@+id/rgLanguage" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvLanguage" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp">
        <RadioButton
                android:text="@string/english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbEnglish" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/portuguese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbPortuguese" android:layout_weight="1"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>